<resources>
    <string name="app_name">2.2_Shared</string>
    <string name="action_settings">Settings</string>
    <string name="email">Nombre</string>
    <string name="celular">Celular</string>
    <string name="direccion">Direccion</string>
    <string name="hora">Hora</string>
    <string name="platillos">Numero de Platillos</string>
    <string name="postres">Numero de Postres</string>
    <string name="manteleria">Manteleria</string>
    <string name="basica">Basica</string>
    <string name="lujo">Lujo</string>
    <string name="save_me">Save Me</string>
    <string name="retrieve">Get Me</string>


</resources>
